--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -1,5 +1,5 @@
 .alert {
-	@apply relative flex text-sm text-accent p-3 min-h-12 min-w-80 w-80 max-w-80 overflow-hidden rounded;
+	@apply relative flex text-sm text-muted p-3 h-12 shrink-0 min-w-80 w-80 max-w-80 overflow-hidden rounded;
 }
 
 .alert.alert-erro {
@@ -11,5 +11,5 @@
 }
 
 .btn-x-close {
-	@apply absolute top-1 right-1 flex justify-center items-center pt-2.5 bg-white text-background w-4 h-4 text-xs p-1 rounded-full;
+	@apply absolute top-2 right-2 flex justify-center items-center shrink-0 bg-background text-foreground w-4 h-4 text-xs p-1 rounded-full;
 }
