--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,9 @@
 <div class="flex flex-col h-screen overflow-hidden max-w-[1920px] mx-auto">
-	<nav class="sticky top-0 inline-flex w-full h-12 md:h-14 xl:h-16 flex-shrink-0 bg-primary z-[1000]"></nav>
+	<nav class="sticky top-0 inline-flex w-full h-12 md:h-14 xl:h-16 flex-shrink-0 bg-primary z-[1000]">
+		<div class="inline-flex items-center justify-end w-full max-w-screen-xl px-16 mx-auto xl:px-8 max-sm:px-4">
+			<button class="text-muted" title="Sait" (click)="logout()" [disabled]="this.isLoading()">{{ this.isLoading() ? "Saindo" : "Sair" }}</button>
+		</div>
+	</nav>
 	<div class="flex flex-col flex-grow overflow-y-auto">
 		<router-outlet />
 	</div>
