Feat :sparkles: Froms.

--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -1,5 +1,5 @@
 .alert {
-	@apply relative flex text-sm text-muted p-3 h-12 shrink-0 min-w-80 w-80 max-w-80 overflow-hidden rounded;
+	@apply relative flex text-sm text-muted p-3 min-h-12 shrink-0 min-w-80 w-80 max-w-80 overflow-hidden rounded;
 }
 
 .alert.alert-erro {
