--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,12 +85,24 @@
 	@apply uppercase;
 }
 
+/* Classe padrão input e textarea */
 input,
 textarea {
 	@apply w-full rounded-lg outline-none bg-background px-3 py-2 border focus:outline-none focus:ring-1 focus:ring-accent text-sm  transition-all ease-in-out duration-300 max-sm:duration-0;
 }
 
+/* Classe para estados inválidos em input e textarea */
 input.is-invalid,
 textarea.is-invalid {
+	@apply border border-destructive focus:outline-none focus:ring-1 focus:ring-destructive focus:border-destructive;
+}
+
+/* Classe padrão para o select */
+select {
+	@apply w-full rounded-lg outline-none bg-background px-3 py-2 border focus:ring-1 focus:ring-accent text-sm transition-all ease-in-out duration-300 max-sm:duration-0;
+}
+
+/* Classe para estados inválidos do select */
+select.is-invalid {
 	@apply border border-destructive focus:outline-none focus:ring-1 focus:ring-destructive focus:border-destructive;
 }
