--- a/src/app/layout/pages/entity-add/entity-add.component.html
+++ b/src/app/layout/pages/entity-add/entity-add.component.html
@@ -52,23 +52,21 @@
 							</div>
 						</div>
 						<div class="grid grid-cols-1 gap-5 md:grid-cols-3">
-							<div>
+							<div class="col-span-2">
 								<label for="data_inauguracao">Data de Inauguração</label>
-								<input
-									type="text"
-									formControlName="data_inauguracao"
-									placeholder="00/00/0000"
-									[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'data_inauguracao'), this.isFormSubmited)"
-									mask="00/00/0000"
-								/>
-							</div>
-							<div>
-								<label for=""> </label>
-								<input type="text" />
-							</div>
-							<div>
-								<label for=""> </label>
-								<input type="text" />
+								<div class="grid grid-cols-1 gap-5 md:grid-cols-2">
+									<input
+										type="text"
+										formControlName="data_inauguracao"
+										placeholder="00/00/0000"
+										[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'data_inauguracao'), this.isFormSubmited)"
+										mask="00/00/0000"
+									/>
+									<label for="ativa" class="checkbox-label" title="Ativa">
+										<input id="ativa" type="checkbox" formControlName="ativa" class="checkbox" />
+										Ativa
+									</label>
+								</div>
 							</div>
 						</div>
 					</div>
