Feat :sparkles: Multi seletor.

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="inline-flex justify-center gap-5">
-				<button type="submit" title="Entrar" [disabled]="this.isLoading()">{{ this.isLoading() ? "Enviando" : "Enviar" }}</button>
+				<button type="submit" class="default" title="Entrar" [disabled]="this.isLoading()">{{ this.isLoading() ? "Enviando" : "Enviar" }}</button>
 			</div>
 		</form>
 	</div>
