--- a/src/app/layout/pages/entity-list/entity-list.component.html
+++ b/src/app/layout/pages/entity-list/entity-list.component.html
@@ -2,7 +2,7 @@
 	<div class="flex flex-col gap-16">
 		<div class="flex flex-col items-center justify-between sm:flex-row max-sm:flex-col">
 			<h2 class="f2">Entidades</h2>
-			<button title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
+			<button class="default" title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
 		</div>
 	</div>
 </app-container-base>
