--- a/src/app/layout/pages/entity-read/entity-read.component.html
+++ b/src/app/layout/pages/entity-read/entity-read.component.html
@@ -1,8 +1,8 @@
 <app-container-base>
 	<p>entity-read works!</p>
-	<button title="Voltar" (click)="back()">Voltar</button>
+	<button class="default" class="default" title="Voltar" (click)="back()">Voltar</button>
 
 	<div>
-		<button title="Editar" (click)="edit()">Editar</button>
+		<button class="default" title="Editar" (click)="edit()">Editar</button>
 	</div>
 </app-container-base>
