--- a/src/app/layout/pages/entity-add/entity-add.component.html
+++ b/src/app/layout/pages/entity-add/entity-add.component.html
@@ -1,80 +1,19 @@
-@if (!this.erro) {
-	@if (regional$ | async; as regional) {
+@if (!this.erro()) {
+	@if (dataCombined$ | async; as data) {
 		<app-container-base>
 			<div class="flex flex-col items-center w-full gap-16 sm:items-start">
 				<h2 class="f2">Criar Entidade</h2>
-
-				<form class="flex flex-col w-full gap-10" [formGroup]="entityForm" (ngSubmit)="save()">
-					<div class="grid gap-5">
-						<div class="grid grid-cols-1 gap-5 md:grid-cols-3">
-							<div>
-								<label for="cnpj">CNPJ</label>
-								<input
-									type="text"
-									formControlName="cnpj"
-									placeholder="00.000.000/0000-00"
-									[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'cnpj'), this.isFormSubmited)"
-									mask="00.000.000/0000-00"
-								/>
-							</div>
-							<div>
-								<label for="regional_id">Regional</label>
-								<select
-									name="regional_id"
-									formControlName="regional_id"
-									[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'regional_id'), this.isFormSubmited)"
-								>
-									<option value="" selected>Selecione</option>
-									@for (item of regional; track item.uuid) {
-										<option [value]="item.uuid">{{ item.label }}</option>
-									}
-								</select>
-							</div>
-						</div>
-						<div class="grid grid-cols-1 gap-5 md:grid-cols-2">
-							<div>
-								<label for="razao_social">Razao Social</label>
-								<input
-									type="text"
-									formControlName="razao_social"
-									placeholder="Ex.: Razao Social S/A"
-									[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'razao_social'), this.isFormSubmited)"
-								/>
-							</div>
-							<div>
-								<label for="nome_fantasia">Nome Fantasia</label>
-								<input
-									type="text"
-									formControlName="nome_fantasia"
-									placeholder="Ex.: Fantasia"
-									[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'nome_fantasia'), this.isFormSubmited)"
-								/>
-							</div>
-						</div>
-						<div class="grid grid-cols-1 gap-5 md:grid-cols-3">
-							<div class="col-span-2">
-								<label for="data_inauguracao">Data de Inauguração</label>
-								<div class="grid grid-cols-1 gap-5 md:grid-cols-2">
-									<input
-										type="text"
-										formControlName="data_inauguracao"
-										placeholder="00/00/0000"
-										[ngClass]="formUtils.invalidClass(formUtils.getControl(entityForm, 'data_inauguracao'), this.isFormSubmited)"
-										mask="00/00/0000"
-									/>
-									<label for="ativa" class="checkbox-label" title="Ativa">
-										<input id="ativa" type="checkbox" formControlName="ativa" class="checkbox" />
-										Ativa
-									</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="inline-flex justify-end gap-5">
-						<button title="Cancelar" (click)="cancel()">Cancelar</button>
-						<button title="Salvar" type="submit">Salvar</button>
-					</div>
-				</form>
+				<div class="block w-full">
+					<app-entity-form
+						[entityForm]="entityForm"
+						[regionais]="data.regionais"
+						[especialidades]="[]"
+						[isLoading]="isLoading()"
+						[isFormSubmited]="isFormSubmited()"
+						(save)="save()"
+						(cancel)="cancel()"
+					></app-entity-form>
+				</div>
 			</div>
 		</app-container-base>
 	} @else {
@@ -88,7 +27,7 @@
 	<app-container-base>
 		<div class="flex flex-col items-center w-full gap-16 sm:items-start">
 			<h2 class="f2">Ops! :(</h2>
-			<button title="Tentar novamente" (click)="reloadData()">Tentar novamente</button>
+			<button class="default" title="Tentar novamente" (click)="reloadData()">Tentar novamente</button>
 		</div>
 	</app-container-base>
 }
