--- a/src/app/layout/pages/entity-edit/entity-edit.component.html
+++ b/src/app/layout/pages/entity-edit/entity-edit.component.html
@@ -1,10 +1,10 @@
 <app-container-base>
 	<p>entity-edit works!</p>
 
-	<button title="Excluir" (click)="remove()">Excluir</button>
+	<button class="default" title="Excluir" (click)="remove()">Excluir</button>
 
 	<div>
-		<button title="Cancelar" (click)="cancel()">Cancelar</button>
-		<button title="Editar" (click)="edit()">Editar</button>
+		<button class="default" title="Cancelar" (click)="cancel()">Cancelar</button>
+		<button class="default" title="Editar" (click)="edit()">Editar</button>
 	</div>
 </app-container-base>
