Feat :sparkles: Componentização formulário add.

--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -6,8 +6,8 @@
 	@apply bg-destructive;
 }
 
-.alert.alert-info {
-	@apply bg-background;
+.alert.alert-success {
+	@apply bg-accent;
 }
 
 .btn-x-close {
