--- a/src/app/layout/pages/entity-add/entity-add.component.html
+++ b/src/app/layout/pages/entity-add/entity-add.component.html
@@ -7,7 +7,7 @@
 					<app-entity-form
 						[entityForm]="entityForm"
 						[regionais]="data.regionais"
-						[especialidades]="[]"
+						[especialidades]="data.especialidades"
 						[isLoading]="isLoading()"
 						[isFormSubmited]="isFormSubmited()"
 						(save)="save()"
