--- a/src/app/modules/entidades/views/read/read.component.html
+++ b/src/app/modules/entidades/views/read/read.component.html
@@ -29,7 +29,7 @@
 							</div>
 							<div class="flex flex-col">
 								<p class="font-semibold">Regional</p>
-								<p>{{ entidade.regional_id }}</p>
+								<p>{{ entidade.regional.label }}</p>
 							</div>
 							<div class="flex flex-col">
 								<p class="font-semibold">Data de Inauguração</p>
