Feat :sparkles: Construção de modal, lógica para editar, excluir, visualizar entidade.

--- a/src/app/modules/entidades/components/entidade-form/entidade-form.component.html
+++ b/src/app/modules/entidades/components/entidade-form/entidade-form.component.html
@@ -20,6 +20,7 @@
 							formControlName="regional_id"
 							[items]="data.regionais"
 							[ngClass]="formUtils.invalidClass(formUtils.getControl(form, 'regional_id'), this.isFormSubmited())"
+							[isLoading]="this.isLoading()"
 						></app-selector>
 					</div>
 					<div>
@@ -28,6 +29,7 @@
 							formControlName="especialidades"
 							[items]="data.especialidades"
 							[ngClass]="formUtils.invalidClass(formUtils.getControl(form, 'especialidades'), this.isFormSubmited())"
+							[isLoading]="this.isLoading()"
 						></app-multi-selector>
 					</div>
 				</div>
@@ -62,7 +64,7 @@
 								[ngClass]="formUtils.invalidClass(formUtils.getControl(form, 'data_inauguracao'), this.isFormSubmited())"
 								mask="00/00/0000"
 							/>
-							<label for="ativa" class="checkbox-label" title="Ativa">
+							<label for="ativa" class="checkbox-label" title="Ativa" [ngClass]="{ '!cursor-default': this.isLoading() }">
 								<input id="ativa" type="checkbox" formControlName="ativa" class="checkbox" />
 								Ativa
 							</label>
@@ -71,9 +73,9 @@
 				</div>
 			</div>
 			<div class="inline-flex justify-end gap-5">
-				<button class="default" title="Cancelar" (click)="cancel()">Cancelar</button>
-				<button class="default" [title]="isEdit() ? 'Editar' : 'Salvar'" type="submit" [disabled]="this.isLoading()">
-					{{ isLoading() | action: isEdit() }}
+				<button type="button" class="default" title="Cancelar" [disabled]="this.isLoading()" (click)="cancel()">Cancelar</button>
+				<button type="submit" class="primary" [title]="isEdit() ? 'Editar' : 'Salvar'" [disabled]="this.isLoading()">
+					{{ isLoading() | textActionSubmit: isEdit() }}
 				</button>
 			</div>
 		</form>
@@ -85,6 +87,6 @@
 } @else {
 	<div class="flex flex-col items-center w-full gap-16 sm:items-start fade-in">
 		<h2 class="f4">Ops! :(</h2>
-		<button class="default" title="Tentar novamente" (click)="reloadData()">Tentar novamente</button>
+		<button type="button" class="default" title="Tentar novamente" (click)="reloadData()">Tentar novamente</button>
 	</div>
 }
