--- a/src/app/modules/entidades/views/add/add.component.html
+++ b/src/app/modules/entidades/views/add/add.component.html
@@ -1,6 +1,6 @@
 <app-container-base>
 	<div class="flex flex-col gap-16">
-		<div class="flex flex-col items-center justify-between sm:flex-row max-sm:flex-col">
+		<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
 			<h2 class="f2">Criar Entidade</h2>
 		</div>
 		<div class="block w-full">
