--- a/src/app/modules/entidades/views/edit/edit.component.html
+++ b/src/app/modules/entidades/views/edit/edit.component.html
@@ -2,12 +2,12 @@
 	@if (!this.erro()) {
 		@if (entidade$ | async; as entidade) {
 			<div class="flex flex-col gap-16">
-				<div class="flex flex-col items-center justify-between sm:flex-row max-sm:flex-col">
+				<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
 					<h2 class="f2">Editar Entidade</h2>
-					<button class="default" title="Excluir Entidade" (click)="remove(entidade.uuid)">Excluir</button>
+					<button type="button" class="remove" title="Excluir Entidade" (click)="remove(entidade)" [disabled]="formIsDisabled()">Excluir</button>
 				</div>
 				<div class="block w-full">
-					<app-entidade-form [entidade]="entidade" />
+					<app-entidade-form [entidade]="entidade" (isDisabled)="formIsDisabled.set($event)" />
 				</div>
 			</div>
 		} @else {
