--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,15 +123,15 @@ select.is-invalid {
 }
 
 button.default {
-	@apply w-auto min-w-24 rounded-none bg-white px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-white transition-all ease-in-out duration-300 max-sm:duration-0 text-accent font-semibold;
+	@apply min-w-24 rounded-none bg-white px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-white transition-all ease-in-out duration-300 max-sm:duration-0 text-accent font-semibold;
 }
 
 button.primary {
-	@apply w-auto min-w-24 rounded-none bg-primary px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-primary transition-all ease-in-out duration-300 max-sm:duration-0 text-white font-semibold;
+	@apply min-w-24 rounded-none bg-primary px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-primary transition-all ease-in-out duration-300 max-sm:duration-0 text-white font-semibold;
 }
 
 button.remove {
-	@apply w-auto min-w-24 rounded-none bg-destructive px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-destructive transition-all ease-in-out duration-300 max-sm:duration-0 text-white font-semibold;
+	@apply min-w-24 rounded-none bg-destructive px-3 py-2 border text-sm focus:outline-none focus:ring-1 focus:ring-destructive transition-all ease-in-out duration-300 max-sm:duration-0 text-white font-semibold;
 }
 
 // .no-scrollbar {
