--- a/src/app/modules/entidades/views/edit/edit.component.html
+++ b/src/app/modules/entidades/views/edit/edit.component.html
@@ -4,7 +4,9 @@
 			<div class="flex flex-col gap-16">
 				<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
 					<h2 class="f2">Editar Entidade</h2>
-					<button type="button" class="remove" title="Excluir Entidade" (click)="remove(entidade)" [disabled]="formIsDisabled()">Excluir</button>
+					<button type="button" class="max-sm:w-full remove" title="Excluir Entidade" (click)="remove(entidade)" [disabled]="formIsDisabled()">
+						Excluir
+					</button>
 				</div>
 				<div class="block w-full">
 					<app-entidade-form [entidade]="entidade" (isDisabled)="formIsDisabled.set($event)" />
