--- a/src/app/modules/entidades/views/list/list.component.html
+++ b/src/app/modules/entidades/views/list/list.component.html
@@ -4,54 +4,58 @@
 			<div class="flex flex-col gap-16">
 				<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
 					<h2 class="f2">Entidades</h2>
-					<button type="button" class="primary" title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
+					<button type="button" class="max-sm:w-full primary" title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
 				</div>
 
 				<div>
-					<input type="search" [formControl]="searchField" />
+					<label for="search">Pesquisar</label>
+					<input type="search" name="search" [formControl]="searchField" />
 				</div>
 
 				<div class="block w-full">
 					@if (entidades.length) {
 						<!-- Cabeçalho da "Tabela" -->
-						<div class="hidden bg-gray-200 sm:grid sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] sm:gap-1 sm:px-2 sm:py-1 text-sm font-semibold">
+						<div
+							class="hidden border border-accent bg-accent text-background sm:grid gap-4 px-4 py-2 sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm font-semibold"
+						>
 							<div class="">Nome Fantasia</div>
 							<div class="">Região</div>
 							<div class="">Especialidades</div>
-							<div class="">Ativa</div>
-							<div class="text-xs text-cents">Ações</div>
+							<div class="text-center">Ativa</div>
+							<div class="text-center">Ações</div>
 							<div class=""></div>
 							<!-- Coluna vazia para alinhamento -->
 						</div>
 
 						<!-- Corpo da "Tabela" -->
 
-						<ul>
+						<ul class="border-x" role="table">
 							@for (entidade of entidades; track entidade.uuid; let idx = $index, o = $odd) {
 								<li
-									class="grid items-start grid-cols-1 gap-4 px-4 py-2 border-b sm:items-center sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm"
+									role="row"
+									class="grid items-start grid-cols-1 gap-4 px-4 py-2 max-sm:first:border-t border-b sm:items-center sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm"
 									[ngClass]="{ 'bg-muted': o }"
 								>
 									<!-- Nome Fantasia -->
-									<div>
+									<div role="cell">
 										<span class="block font-semibold sm:hidden">Nome Fantasia:</span>
-										{{ entidade.nome_fantasia }}
+										<span class="line-clamp-1">{{ entidade.nome_fantasia }}</span>
 									</div>
 
 									<!-- Região -->
-									<div>
+									<div role="cell">
 										<span class="block font-semibold sm:hidden">Região:</span>
-										{{ entidade.regional.label }}
+										<span class="line-clamp-1">{{ entidade.regional.label }}</span>
 									</div>
 
 									<!-- Especialidades -->
-									<div>
+									<div role="cell">
 										<span class="block font-semibold sm:hidden">Especialidades:</span>
-										<!-- {{ entidade.especialidades }} -->
+										<span class="line-clamp-1"> {{ entidade.especialidades | textEspecialidades }} </span>
 									</div>
 
 									<!-- Ativa -->
-									<div>
+									<div role="cell" class="flex sm:justify-center">
 										<span class="block font-semibold sm:hidden">Ativa:</span>
 										<app-icon
 											class="w-8 h-8 text-2xl shrink-0"
@@ -61,14 +65,14 @@
 									</div>
 
 									<!-- Ações -->
-									<div class="flex items-center justify-start gap-3 sm:justify-center">
+									<div role="cell" class="flex items-center justify-start gap-3 sm:justify-center">
 										<button
 											type="button"
 											class="flex items-center justify-center w-8 h-8 text-lg shrink-0"
 											title="Visualizar Entidade"
 											(click)="read(entidade.uuid)"
 										>
-											<app-icon icon="heroEye" class="text-yellow-600" />
+											<app-icon icon="heroEye" class="text-accent" />
 										</button>
 										<button
 											type="button"
@@ -76,17 +80,19 @@
 											title="Editar Entidade"
 											(click)="edit(entidade.uuid)"
 										>
-											<app-icon icon="heroPencil" class="text-green-700" />
+											<app-icon icon="heroPencil" class="text-primary" />
 										</button>
 									</div>
 
 									<!-- Espaço Extra -->
-									<div class="hidden sm:block"></div>
+									<div role="cell" class="hidden sm:block"></div>
 								</li>
 							}
 						</ul>
+						<!-- paginação -->
+						<app-pagination class="block mt-3" [currentPage]="1" [totalPages]="200" (pageChanged)="onPageChanged($event)"> </app-pagination>
 					} @else {
-						<div class="flex flex-col items-center w-full gap-8">
+						<div class="flex flex-col items-center w-full h-full gap-8">
 							<p>Não foram encontrados resultados.</p>
 							<h2 class="f4">Ops! :(</h2>
 						</div>
