--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,5 +1,5 @@
-<div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-[1080] max-sm:p-4" [class.hidden]="!this.isVisible()">
-	<div class="relative w-full max-w-lg p-6 bg-white rounded shadow-lg">
+<div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-[1080] p-4 max-h-full" [ngClass]="{ hidden: !this.isVisible() }">
+	<div class="relative w-full max-w-lg max-h-full p-6 overflow-y-auto bg-white rounded-none shadow-xl shrink-0">
 		<ng-container #modalContent></ng-container>
 		<button type="button" title="Fechar" class="absolute w-8 h-8 text-2xl text-gray-500 top-2 right-2 shrink-0" (click)="close()">
 			<app-icon icon="heroXMark" />
