--- a/src/app/modules/entidades/views/list/list.component.html
+++ b/src/app/modules/entidades/views/list/list.component.html
@@ -1,112 +1,111 @@
 <app-container-base>
-	@if (!this.erro()) {
-		@if (entidades$ | async; as entidades) {
-			<div class="flex flex-col gap-16">
-				<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
-					<h2 class="f2">Entidades</h2>
-					<button type="button" class="max-sm:w-full primary" title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
-				</div>
-
-				<div>
-					<label for="search">Pesquisar</label>
-					<input type="search" name="search" [formControl]="searchField" />
-				</div>
-
-				<div class="block w-full">
-					@if (entidades.length) {
-						<!-- Cabeçalho da "Tabela" -->
-						<div
-							class="hidden border border-accent bg-accent text-background sm:grid gap-4 px-4 py-2 sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm font-semibold"
-						>
-							<div class="">Nome Fantasia</div>
-							<div class="">Região</div>
-							<div class="">Especialidades</div>
-							<div class="text-center">Ativa</div>
-							<div class="text-center">Ações</div>
-							<div class=""></div>
-							<!-- Coluna vazia para alinhamento -->
-						</div>
-
-						<!-- Corpo da "Tabela" -->
-
-						<ul class="border-x" role="table">
-							@for (entidade of entidades; track entidade.uuid; let idx = $index, o = $odd) {
-								<li
-									role="row"
-									class="grid items-start grid-cols-1 gap-4 px-4 py-2 max-sm:first:border-t border-b sm:items-center sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm"
-									[ngClass]="{ 'bg-muted': o }"
-								>
-									<!-- Nome Fantasia -->
-									<div role="cell">
-										<span class="block font-semibold sm:hidden">Nome Fantasia:</span>
-										<span class="line-clamp-1">{{ entidade.nome_fantasia }}</span>
-									</div>
-
-									<!-- Região -->
-									<div role="cell">
-										<span class="block font-semibold sm:hidden">Região:</span>
-										<span class="line-clamp-1">{{ entidade.regional.label }}</span>
-									</div>
-
-									<!-- Especialidades -->
-									<div role="cell">
-										<span class="block font-semibold sm:hidden">Especialidades:</span>
-										<span class="line-clamp-1"> {{ entidade.especialidades | textEspecialidades }} </span>
-									</div>
-
-									<!-- Ativa -->
-									<div role="cell" class="flex sm:justify-center">
-										<span class="block font-semibold sm:hidden">Ativa:</span>
-										<app-icon
-											class="w-8 h-8 text-2xl shrink-0"
-											[icon]="entidade.ativa ? 'heroCheck' : 'heroMinus'"
-											[ngClass]="entidade.ativa ? 'text-success' : 'text-destructive'"
-										/>
-									</div>
-
-									<!-- Ações -->
-									<div role="cell" class="flex items-center justify-start gap-3 sm:justify-center">
-										<button
-											type="button"
-											class="flex items-center justify-center w-8 h-8 text-lg shrink-0"
-											title="Visualizar Entidade"
-											(click)="read(entidade.uuid)"
-										>
-											<app-icon icon="heroEye" class="text-accent" />
-										</button>
-										<button
-											type="button"
-											class="flex items-center justify-center w-8 h-8 text-lg shrink-0"
-											title="Editar Entidade"
-											(click)="edit(entidade.uuid)"
-										>
-											<app-icon icon="heroPencil" class="text-primary" />
-										</button>
-									</div>
-
-									<!-- Espaço Extra -->
-									<div role="cell" class="hidden sm:block"></div>
-								</li>
-							}
-						</ul>
-						<!-- paginação -->
-						<app-pagination class="block mt-3" [currentPage]="1" [totalPages]="200" (pageChanged)="onPageChanged($event)"> </app-pagination>
-					} @else {
-						<div class="flex flex-col items-center w-full h-full gap-8">
-							<p>Não foram encontrados resultados.</p>
-							<h2 class="f4">Ops! :(</h2>
-						</div>
-					}
-				</div>
-			</div>
-		} @else {
-			<div class="flex flex-col items-center w-full gap-16 sm:items-start fade-in">
-				<h2 class="f4">Carregando...</h2>
-			</div>
-		}
-	} @else {
-		<div class="flex flex-col items-center w-full gap-16 sm:items-start fade-in">
-			<h2 class="f4">Ops! :(</h2>
+	<div class="flex flex-col gap-16">
+		<div class="flex items-center justify-between gap-8 sm:flex-row max-sm:flex-col-reverse">
+			<h2 class="f2">Entidades</h2>
+			<button type="button" class="max-sm:w-full primary" title="Criar Nova Entidade" (click)="add()">Nova Entidade</button>
 		</div>
-	}
+		<!-- campo de busca -->
+		<div>
+			<label for="search">Pesquisar</label>
+			<input type="search" name="search" [formControl]="searchField" placeholder="Pesquisar por: Nome, Razão Social, CNPJ ou Região" />
+		</div>
+
+		@if (entidadesPagination$ | async; as entidades) {
+			@if (entidades.isLoading) {
+				<div class="flex flex-col items-center w-full gap-16 fade-in">
+					<h2 class="f4">Carregando...</h2>
+				</div>
+			} @else {
+				@if (entidades.error) {
+					<div class="flex flex-col items-center w-full gap-16 sm:items-start fade-in">
+						<h2 class="f4">Ops! :(</h2>
+					</div>
+				} @else {
+					<div class="block w-full">
+						@if (entidades.data.data.length) {
+							<!-- cabeçalho da listagem -->
+							<div
+								class="hidden border border-accent bg-accent text-background sm:grid gap-4 px-4 py-2 sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm font-semibold"
+							>
+								<div class="">Nome Fantasia</div>
+								<div class="">Região</div>
+								<div class="">Especialidades</div>
+								<div class="text-center">Ativa</div>
+								<div class="text-center">Ações</div>
+								<div class=""></div>
+							</div>
+							<!-- corpo da listagem -->
+							<ul class="border-x" role="table">
+								@for (entidade of entidades.data.data; track entidade.uuid; let idx = $index, o = $odd) {
+									<li
+										role="row"
+										class="grid items-start grid-cols-1 gap-4 px-4 py-2 max-sm:first:border-t border-b sm:items-center sm:grid-cols-[2fr_1fr_2fr_1fr_1fr_auto] text-sm"
+										[ngClass]="{ 'bg-muted': o }"
+									>
+										<div role="cell">
+											<span class="block font-semibold sm:hidden">Nome Fantasia:</span>
+											<span class="line-clamp-1">{{ entidade.nome_fantasia }}</span>
+										</div>
+
+										<div role="cell">
+											<span class="block font-semibold sm:hidden">Região:</span>
+											<span class="line-clamp-1">{{ entidade.regional.label }}</span>
+										</div>
+
+										<div role="cell">
+											<span class="block font-semibold sm:hidden">Especialidades:</span>
+											<span class="line-clamp-1"> {{ entidade.especialidades | textEspecialidades }} </span>
+										</div>
+
+										<div role="cell" class="flex sm:justify-center">
+											<span class="block font-semibold sm:hidden">Ativa:</span>
+											<app-icon
+												class="w-8 h-8 text-2xl shrink-0"
+												[icon]="entidade.ativa ? 'heroCheck' : 'heroMinus'"
+												[ngClass]="entidade.ativa ? 'text-success' : 'text-destructive'"
+											/>
+										</div>
+
+										<div role="cell" class="flex items-center justify-start gap-3 sm:justify-center">
+											<button
+												type="button"
+												class="flex items-center justify-center w-8 h-8 text-lg shrink-0"
+												title="Visualizar Entidade"
+												(click)="read(entidade.uuid)"
+											>
+												<app-icon icon="heroEye" class="text-accent" />
+											</button>
+											<button
+												type="button"
+												class="flex items-center justify-center w-8 h-8 text-lg shrink-0"
+												title="Editar Entidade"
+												(click)="edit(entidade.uuid)"
+											>
+												<app-icon icon="heroPencil" class="text-primary" />
+											</button>
+										</div>
+
+										<div role="cell" class="hidden sm:block"></div>
+									</li>
+								}
+							</ul>
+							<!-- controles de paginação -->
+							<app-pagination
+								class="block mt-3"
+								[currentPage]="entidades.data.current_page"
+								[totalPages]="entidades.data.last_page"
+								(pageChanged)="filterByPage($event)"
+							>
+							</app-pagination>
+						} @else {
+							<div class="flex flex-col items-center w-full h-full gap-8">
+								<p>Não foram encontrados resultados.</p>
+								<h2 class="f4">Ops! :(</h2>
+							</div>
+						}
+					</div>
+				}
+			}
+		}
+	</div>
 </app-container-base>
