--- a/src/app/shared/progress-bar/progress-bar.component.html
+++ b/src/app/shared/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 @if (progress$ | async) {
-	<div class="relative w-full h-1 overflow-hidden bg-transparent sm:h-2">
-		<div class="absolute w-full h-full rounded-r-full bg-gradient-to-r from-accent via-green-500 to-violet-500 animate-progress"></div>
+	<div class="relative w-full overflow-hidden bg-transparent h-0.5 md:h-1 xl:h-1.5">
+		<div class="absolute w-full h-full rounded-r-full bg-gradient-to-r from-accent via-violet-500 to-blue-500 animate-progress"></div>
 	</div>
 }
